force-app/main/default/objects/Flow_Notification_Settings__c/Flow_Notification_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings to enable/disable email notification flow for each object</description>
    <label>Flow Notification Settings</label>
</CustomObject>