force-app/main/default/objects/Flow_Notification_Settings__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used in Contact flow Email alerts.</description>
    <label>Contact</label>
    <type>Checkbox</type>
</CustomField>