force-app/main/default/objects/Flow_Notification_Settings__c/fields/Opp_Product__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opp Product</label>
    <type>Checkbox</type>
</CustomField>