force-app/main/default/objects/Flow_Notification_Settings__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Order</label>
    <type>Checkbox</type>
</CustomField>