force-app/main/default/objects/Flow_Notification_Settings__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Regarding notification in flows related to Product2 object</description>
    <label>Product2</label>
    <type>Checkbox</type>
</CustomField>