force-app/main/default/objects/Flow_Notification_Settings__c/fields/Samples__c.field-meta.xml
<CustomField>
    <fullName>Samples__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Samples</label>
    <type>Checkbox</type>
</CustomField>