force-app/main/default/objects/Flow_Notification_Settings__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Regarding Flow notifications regarding Task Object</description>
    <label>Task</label>
    <type>Checkbox</type>
</CustomField>